# hist

./: README.md  _show_rofi.zsh  common.h  hist.zsh  main.c  meson.build
